Some more cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-screen bg-cover w-screen font-mono text-gray-50">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -11,8 +11,8 @@
     />
     <title>wrtsc</title>
   </head>
-  <body>
+  <body class="h-screen w-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-screen w-screen"></div>
   </body>
 </html>
