De-monospace the font
The aesthetic isn't that good, and it makes everything kinda wide.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-cover font-mono text-gray-50">
+<html lang="en" class="bg-cover text-gray-50">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
