Put an upper bound on the center panel's height.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-screen min-h-[40rem]"></div>
+    <div id="root" class="h-screen min-h-[40rem] max-h-[60rem]"></div>
   </body>
 </html>
