--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en" class="bg-cover text-gray-50">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,6 +11,7 @@
     <title>wrtsc</title>
   </head>
   <body>
+    <script type="module" src="./index.tsx"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-screen min-h-[40rem] max-h-[60rem]"></div>
   </body>
